# CommonCode

./: README.md  sort_test.cpp
cmake/: tree.txt
cmake/final/share/doc/cmake/t2/: hello.txt
cmake/test1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake/test2/: CMakeLists.txt  CMakeLists.txt~
cmake/test2/src/: CMakeLists.txt  CMakeLists.txt~
cmake/test3/: CMakeLists.txt~
cmake/test3/lib/: CMakeLists.txt  CMakeLists.txt~  hello.c
cmake/test4/: CMakeLists.txt  CMakeLists.txt~
cmake/test4/src/: CMakeLists.txt  CMakeLists.txt~
cmake/test5/src/: CMakeLists.txt  CMakeLists.txt~  main.c
cmake/test6/: CMakeLists.txt  CMakeLists.txt~
cmake/test6/cmake/: FindHELLO.cmake  FindHELLO.cmake~
cmake/test6/src/: CMakeLists.txt  CMakeLists.txt~
configIO/: configio.cpp  configio.h
