cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(HELLO)

IF(HELLO_FOUND)
	#MESSAGE("${HELLO_INCLUDE_DIR}")
	#MESSAGE("${HELLO_LIBRARY}")

	INCLUDE_DIRECTORIES(${HELLO_INCLUDE_DIR})
	LINK_DIRECTORIES("/home/bow/all/program/test/cmake/final/lib/")

	ADD_EXECUTABLE(hello main.c)
	TARGET_LINK_LIBRARIES(hello ${HELLO_LIBRARY})
ENDIF(HELLO_FOUND)
